[package]
name = "liftoff"
version = "0.1.0"
authors = ["daksh14 <somilsharma627@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.0" }
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10.8", features = ["rustls-tls", "json", "gzip"] }
serde = "1.0.115"
chrono = "0.4.15"
colored = "2"
diesel = { version = "1.4.0", features = ["sqlite"] }
lazy_static = "1.4.0"
rtoml = "0.1.1"


[profile.release]
lto = true
